<resources>
    <string name="app_name">DEZSYS11</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_log_in">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_already_member">Already a member? Login!</string>
    <string name="action_back_to_register">Not a member? Register!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>

</resources>
